# tact

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  GAME_MECHANICS.md  README.md  integ-test.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/workflows/: platform.yml  test.yml
apps/database-app/: drizzle.config.ts  middleware.ts  next.config.js  package.json  tailwind.config.js
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vercel.json
bot/: .gitignore  Cargo.toml  FundFleet.sh  Makefile  RunFleet.sh
bot/src/: join.rs  main.rs
content/: beta-1.json  beta-3.json
contracts/: .gitignore  .gitmodules  Makefile  bun.lockb  constructor-args.txt  foundry.toml  lcov.info  package.json  pnpm-lock.yaml  remappings.txt  tree.json  tsconfig.json
contracts/script/: 00_DeployGameImpl.s.sol  01_DeployFactories.s.sol  DeployFactories.s.sol  DeployTankGameCustomTemp.s.sol  EmergencyReDeploy.s.sol  FactoryDeployer.s.sol  FillGame.s.sol  StartGame.s.sol  TankGameDeployer.s.sol  TankGameDeployerSim.s.sol  ZkSyncDeployer.s.sol  merkle.ts
contracts/src/: ITankGame.sol  TankGame.sol
contracts/test/: TankGame.t.sol  TankGameFactory.t.sol  TankGameV2.t.sol  TankGameView.t.sol  board.txt
frontend/: .env.local  bun.lockb  components.json  globals.css  goldsky.config.json  package-lock.json  package.json  sample-game-logs.json  tailwind.config.js  tsconfig.json  wagmi.config.ts
frontend/public/: tree.json
server/: README.md  app.js  bun.lockb  index.ts  package.json  tsconfig.json
(+213 files in other folders)
