[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
ethers = "2.0.7"
ethers-signers = "2.0.7"
hexx = "0.8.0"
tokio = { version = "1.29.1", features = ["full"] }
